# aws-3tier-application-infra-as-code

./: main.py  pyproject.toml  readme.MD
scripts/: deploy.py  pre-deploy.py
stacks/: pdw-stack-sandbox-core-infra.yml
templates/: database.yml  network.yml  service.yml  web.yml
utils/: constants.py
