[project]
name = "production-grade-multi-tier-vpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.21",
    "dotenv>=0.9.9",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["scripts", "utils"]